--- a/01-SOC/08-SalaryCalculator.html
+++ b/01-SOC/08-SalaryCalculator.html
@@ -43,21 +43,23 @@
 			this.set = function(attrName, value){
 				if (_data[attrName] === value) return;
 				_data[attrName] = value;
-				var listenerFn = _listeners[attrName];
-				if (typeof listenerFn === 'function')
-					listenerFn();
+				var listenerFns = _listeners[attrName];
+				listenerFns.forEach(function(listenerFn){
+					if (typeof listenerFn === 'function')
+						listenerFn();	
+				});
 			}
 
 			var _listeners = {
-				basic : null,
-				hra : null,
-				da : null,
-				tax : null,
-				salary : null
+				basic : [],
+				hra : [],
+				da : [],
+				tax : [],
+				salary : []
 			};
 
 			this.subscribe = function(attrName, listenerFn){
-				_listeners[attrName] = listenerFn;
+				_listeners[attrName].push(listenerFn);
 			};
 		}
 		//behavior
