--- a/01-SOC/08-SalaryCalculator.html
+++ b/01-SOC/08-SalaryCalculator.html
@@ -72,85 +72,105 @@
 
 		//user interaction
 		//View
-		$(function(){
-			window.model = new SalaryCalculatorModel();
+		function SalaryCalculator(model){
+			var _template = `
+				<section>
+					<div class="field">
+						<label for="">Basic :</label>
+						<input type="number" id="txtBasic">
+					</div>
+					<div class="field">
+						<label for="">HRA :</label>
+						<input type="number" id="txtHra">
+					</div>
+					<div class="field">
+						<label for="">DA :</label>
+						<input type="number" id="txtDa">
+					</div>
+					<div class="field">
+						<label for="">Tax :</label>
+						<input type="range" id="rangeTax" min="0" max="30" value="0">
+					</div>
+					<div class="field">
+						<input type="button" value="Calculate" id="btnCalculate">
+					</div>
+					<div class="field">
+						<table>
+							<tbody>
+								<tr>
+									<td id="tdBasic">[Basic]</td>
+									<td id="tdHra">[Hra]</td>
+									<td id="tdDa">[Da]</td>
+									<td id="tdTax">[Tax]</td>
+									<td id="tdSalary">[Salary]</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</section>
+			`;
 
+			var $root = this.$root = $('<div></div>');
+
+			this.render = function(){
+				$root.html(_template);
+			}
 			//reacting to user actions
-			$('#txtBasic').change(function(){
-				model.set('basic', $('#txtBasic').val().toInt());
+			$root.on('change', '#txtBasic', function(){
+				model.set('basic', $(this).val().toInt());
 			});
 			
-			$('#txtHra').change(function(){
-				model.set('hra', $('#txtHra').val().toInt());
+			$root.on('change', '#txtHra', function(){
+				model.set('hra', $(this).val().toInt());
 			});
 			
-			$('#txtDa').change(function(){
-				model.set('da', $('#txtDa').val().toInt());
+			$root.on('change', '#txtDa', function(){
+				model.set('da', $(this).val().toInt());
 			});
 			
-			$('#rangeTax').change(function(){
-				model.set('tax', $('#rangeTax').val().toInt());
+			$root.on('change', '#rangeTax', function(){
+				model.set('tax', $(this).val().toInt());
 			});
 
-			$('#btnCalculate').click(function(){
+			$root.on('click', '#btnCalculate', function(){
 				model.calculate();
 			});
 
 			//reacting to model changes
 			model.subscribe('salary', function(){
-				$('#tdSalary').html(model.get('salary'));
+				$('#tdSalary', $root).html(model.get('salary'));
 			});
 			model.subscribe('basic', function(){
-				$('#tdBasic').html(model.get('basic'));
+				$('#tdBasic', $root).html(model.get('basic'));
 			});
 			model.subscribe('hra', function(){
-				$('#tdHra').html(model.get('hra'));
+				$('#tdHra', $root).html(model.get('hra'));
 			});
 			model.subscribe('da', function(){
-				$('#tdDa').html(model.get('da'));
+				$('#tdDa', $root).html(model.get('da'));
 			});
 			model.subscribe('tax', function(){
-				$('#tdTax').html(model.get('tax'));
+				$('#tdTax', $root).html(model.get('tax'));
 			});
+		}
+		$(function(){
+			/*
+			window.model = new SalaryCalculatorModel();
+
+			var view = new SalaryCalculator(model);
+			view.render();
+			view.$root.appendTo(document.body);
+
+			var view2 = new SalaryCalculator(model);
+			view2.render();
+			view2.$root.appendTo(document.body);
+			*/
 		});
 	</script>
 </head>
 <body>
 	<h1>Salary Calculator</h1>
 	<hr>
-	<section>
-		<div class="field">
-			<label for="">Basic :</label>
-			<input type="number" id="txtBasic">
-		</div>
-		<div class="field">
-			<label for="">HRA :</label>
-			<input type="number" id="txtHra">
-		</div>
-		<div class="field">
-			<label for="">DA :</label>
-			<input type="number" id="txtDa">
-		</div>
-		<div class="field">
-			<label for="">Tax :</label>
-			<input type="range" id="rangeTax" min="0" max="30" value="0">
-		</div>
-		<div class="field">
-			<input type="button" value="Calculate" id="btnCalculate">
-		</div>
-		<div class="field">
-			<table>
-				<tbody>
-					<tr>
-						<td id="tdBasic">[Basic]</td>
-						<td id="tdHra">[Hra]</td>
-						<td id="tdDa">[Da]</td>
-						<td id="tdTax">[Tax]</td>
-						<td id="tdSalary">[Salary]</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-	</section>
+	
 </body>
 </html>
