--- a/02-react-intro/03-salaryCalculator.html
+++ b/02-react-intro/03-salaryCalculator.html
@@ -19,6 +19,12 @@
 		td{
 			padding: 10px;
 		}
+		.poorSalary{
+			color : red;
+		}
+		.goodSalary{
+			color : green;
+		}
 	</style>
 	<script src="react.js"></script>
 	<script src="react-dom.js"></script>
@@ -75,54 +81,75 @@
 		};
 
 		class SalaryCalculator extends React.Component{
+			state = { rangeValue : 0};
+			onRangeChange(evt){
+				let value = evt.target.value.toInt();
+				this.setState({rangeValue : value});
+				this.props.model.set('tax', value);
+			}
 			render(){
 				let model = this.props.model,
 					data = model.toJSON();
 				return(
 					<section>
-						<div className="field">
-							<label htmlFor="">Basic :</label>
-							<input type="number" onChange={(evt) => model.set('basic', evt.target.value.toInt())}/>
-						</div>
-						<div className="field">
-							<label htmlFor="">HRA :</label>
-							<input type="number" onChange={(evt) => model.set('hra', evt.target.value.toInt())}/>
-						</div>
-						<div className="field">
-							<label htmlFor="">DA :</label>
-							<input type="number" onChange={(evt) => model.set('da', evt.target.value.toInt())}/>
-						</div>
+						<SalaryCalculatorInput displayName="Basic :" valueChange={(val) => model.set('basic', val)}/>
+						<SalaryCalculatorInput displayName="HRA :" valueChange={(val) => model.set('hra', val)}/>
+						<SalaryCalculatorInput displayName="DA :" valueChange={(val) => model.set('da', val)}/>
 						<div className="field">
 							<label htmlFor="">Tax :</label>
-							<input type="range" min="0" max="30" onChange={(evt) => model.set('tax', evt.target.value.toInt())}/>
+							<input type="range" min="0" max="30" value={this.state.rangeValue} onChange={this.onRangeChange.bind(this)}/>
 						</div>
 						<div className="field">
 							<input type="button" value="Calculate" onClick={() => model.calculate()}/>
 						</div>
-						<div className="field">
-							<table>
-								<tbody>
-									<tr>
-										<td id="tdBasic">{data.basic}</td>
-										<td id="tdHra">{data.hra}</td>
-										<td id="tdDa">{data.da}</td>
-										<td id="tdTax">{data.tax}</td>
-										<td id="tdSalary">{data.salary}</td>
-									</tr>
-								</tbody>
-							</table>
-						</div>
+						<SalaryCalculatorResult data={data} />
 					</section>
 				)
 			}
 		}
-		var model = new SalaryCalculatorModel();
-		function renderApp(){
-			ReactDOM.render(<SalaryCalculator model={model}/>,
-				document.getElementById('root'));
+		class SalaryCalculatorInput extends React.Component{
+			render(){
+				let { displayName, valueChange } = this.props;
+				return (
+					<div className="field">
+						<label htmlFor="">{displayName}</label>
+						<input type="number" onChange={(evt) => valueChange(evt.target.value.toInt())}/>
+					</div>
+				);
+			}
 		}
-		model.subscribe(renderApp);
-		renderApp();
+		class SalaryCalculatorResult extends React.Component{
+			render(){
+				let { data : { basic, hra, da, tax, salary } } = this.props;
+				//let salaryEle = data.salary < 10000 ? (<td id="tdSalary" className="poorSalary">{data.salary}</td>) : (<td id="tdSalary" className="goodSalary">{data.salary}</td>)
+				let salaryStyle = salary < 10000 ? 'poorSalary' : 'goodSalary';
+				let salaryEle = salary <= 0 ? null : (<td id="tdSalary" className={salaryStyle}>{salary}</td>)
+				return(
+					<div className="field">
+						<table>
+							<tbody>
+								<tr>
+									<td id="tdBasic">{basic}</td>
+									<td id="tdHra">{hra}</td>
+									<td id="tdDa">{da}</td>
+									<td id="tdTax">{tax}</td>
+									{salaryEle}
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				)
+			}
+		}
+		(function(){
+			var model = new SalaryCalculatorModel();
+			function renderApp(){
+				ReactDOM.render(<SalaryCalculator model={model}/>,
+					document.getElementById('root'));
+			}
+			model.subscribe(renderApp);
+			renderApp();
+		})();
 
 	</script>
 </head>
