--- a/03-bug-tracker/01-index.html
+++ b/03-bug-tracker/01-index.html
@@ -45,41 +45,95 @@
 			margin-bottom: 10px;
 		}
 	</style>
+	<script src="react.js"></script>
+	<script src="react-dom.js"></script>
+	<script src="babel.min.js"></script>
+	<script type="text/babel">
+		class EventEmitter{
+			_listners = [];
+			subscribe(listenerFn){
+				if (typeof listenerFn === 'function')
+					this._listners.push(listenerFn);
+			}
+			triggerChange(){
+				this._listners.forEach(listenerFn => listenerFn());
+			}
+		}
+		class BugsCollection extends EventEmitter{
+			_list = [];
+			constructor(){
+				super();
+			}
+			addNew(bugName){
+				this._list.push(bugName);
+				this.triggerChange();
+			}
+			getAll(){
+				return [...this._list];
+			}
+		}
+
+		class BugTracker extends React.Component{
+			txtNewBugNameRef = React.createRef();
+			constructor(props){
+				super(props);
+				this.onAddNewClick = this.onAddNewClick.bind(this);
+			}
+			onAddNewClick(){
+				this.props.model.addNew(this.txtNewBugNameRef.current.value);
+			}	
+			render(){
+				let { model } = this.props,
+					list = model.getAll(),
+					bugItems = list.map(bug => (
+						<li>
+							<span className="bugname">{bug}</span>
+							<div className="datetime">[Created At]</div>
+						</li>
+					))
+				return(
+					<div>
+						<section className="stats">
+							<span className="closed">1</span>
+							<span> / </span>
+							<span>{list.length}</span>
+						</section>
+						<section className="sort">
+							<label htmlFor="">Order By :</label>
+							<select>
+								<option value=""></option>
+								<option value=""></option>
+							</select>
+							<label htmlFor="">Descending ? :</label>
+							<input type="checkbox" />
+						</section>
+						<section className="edit">
+							<label htmlFor="">Bug Name :</label>
+							<input type="text" ref={this.txtNewBugNameRef}/>
+							<input type="button" value="Add New" onClick={this.onAddNewClick}/>
+						</section>
+						<section className="list">
+							<ol>
+								{bugItems}
+							</ol>
+							<input type="button" value="Remove Closed" />
+						</section>
+					</div>
+				)
+			}
+		}
+		var bugsCollection = new BugsCollection();
+		function renderApp(){
+			ReactDOM.render(<BugTracker model={bugsCollection}/>,
+				document.getElementById('root'));
+		}
+		renderApp();
+		bugsCollection.subscribe(renderApp);
+	</script>
 </head>
 <body>
 	<h1>Bug Tracker</h1>
 	<hr>
-	<section class="stats">
-		<span class="closed">1</span>
-		<span> / </span>
-		<span>2</span>
-	</section>
-	<section class="sort">
-		<label for="">Order By :</label>
-		<select name="" id="">
-			<option value=""></option>
-			<option value=""></option>
-		</select>
-		<label for="">Descending ? :</label>
-		<input type="checkbox" name="" id="">
-	</section>
-	<section class="edit">
-		<label for="">Bug Name :</label>
-		<input type="text" name="" id="">
-		<input type="button" value="Add New">
-	</section>
-	<section class="list">
-		<ol>
-			<li>
-				<span class="bugname">[This is bug - 1]</span>
-				<div class="datetime">[Created At]</div>
-			</li>
-			<li>
-				<span class="bugname closed">[This is bug - 2]</span>
-				<div class="datetime">[Created At]</div>
-			</li>
-		</ol>
-		<input type="button" value="Remove Closed">
-	</section>
+	<div id="root"></div>
 </body>
 </html>
