--- a/03-bug-tracker/01-index.html
+++ b/03-bug-tracker/01-index.html
@@ -65,18 +65,28 @@
 				super();
 			}
 			addNew(bugName){
-				let newBug = {
-					name : bugName,
-					isClosed : false
-				};
+				let newBug = new Bug(bugName);
 				this._list.push(newBug);
 				this.triggerChange();
 			}
 			getAll(){
 				return [...this._list];
 			}
-			toggle(bug){
-				bug.isClosed = !bug.isClosed;
+			removeClosed(){
+				this._list = this._list.filter(bug => !bug.isClosed);
+				this.triggerChange();
+			}
+		}
+
+		class Bug{
+			name = '';
+			isClosed = false;
+
+			constructor(name){
+				this.name = name;
+			}
+			toggle(){
+				this.isClosed = !this.isClosed;
 			}
 		}
 
@@ -86,13 +96,15 @@
 				this.onBugNameClick = this.onBugNameClick.bind(this);
 			}
 			onBugNameClick(){
-				console.log(this.props.bug, 'is being toggled');
+				this.props.bug.toggle();
+				console.log(this.props.bug);
 			}
 			render(){
 				let { bug } = this.props;
 				return(
 					<li >
 						<span className="bugname" onClick={this.onBugNameClick}>{bug.name}</span>
+						<div>[{bug.isClosed.toString()}]</div>
 						<div className="datetime">[Created At]</div>
 					</li>
 				)
@@ -104,13 +116,15 @@
 			constructor(props){
 				super(props);
 				this.onAddNewClick = this.onAddNewClick.bind(this);
-				
+				this.onRemoveClosedClick = this.onRemoveClosedClick.bind(this);
 			}
 			onAddNewClick(){
 				this.props.model.addNew(this.txtNewBugNameRef.current.value);
 			}
 
-				
+			onRemoveClosedClick(){
+				this.props.model.removeClosed();
+			}
 			render(){
 				let { model } = this.props,
 					list = model.getAll(),
@@ -142,7 +156,7 @@
 							<ol>
 								{bugItems}
 							</ol>
-							<input type="button" value="Remove Closed" />
+							<input type="button" value="Remove Closed" onClick={this.onRemoveClosedClick} />
 						</section>
 					</div>
 				)
