--- a/04-state-manager/index.html
+++ b/04-state-manager/index.html
@@ -19,12 +19,58 @@
 		store.dispatch(inc_action);
 		store.dispatch(dec_action);*/
 	</script>
+	<script src="react.js"></script>
+	<script src="react-dom.js"></script>
+	<script src="babel.min.js"></script>
+	<script type="text/babel">
+		
+
+		class Spinner extends React.Component{
+			inc_action = { type : 'INCREMENT' };
+			dec_action = { type : 'DECREMENT' };
+
+			constructor(props){
+				super(props);
+				this.onIncrementClick = this.onIncrementClick.bind(this);
+				this.onDecrementClick = this.onDecrementClick.bind(this);
+			}
+			onIncrementClick(){
+				this.props.store.dispatch(this.inc_action);
+			}
+			onDecrementClick(){
+				this.props.store.dispatch(this.dec_action);
+			}
+			render(){
+				let value = this.props.store.getState();
+				return(
+					<div>
+						<input type="button" value="DECREMENT" onClick={this.onDecrementClick}/>
+						<span> [ {value} ] </span>
+						<input type="button" value="INCREMENT" onClick={this.onIncrementClick}/>
+					</div>
+				)
+			}
+		}
+
+		function spinnerReducer(currentState = 0, action){
+			if (action.type === 'INCREMENT')
+				return ++currentState;
+			if (action.type === 'DECREMENT')
+				return --currentState;
+			return currentState;
+		}
+
+		var store = SM.createStore(spinnerReducer);
+
+		function renderApp(){
+			ReactDOM.render(<Spinner store={store} />,
+				document.getElementById('root'));
+		}
+		renderApp();
+		store.subscribe(renderApp);
+	</script>
 </head>
 <body>
-	<div>
-		<input type="button" value="DECREMENT" />
-		<span>[ value ]</span>
-		<input type="button" value="INCREMENT" />
-	</div>
+	<div id="root"></div>
 </body>
 </html>
