--- a/05-bug-tracker-state-manager/04-index.html
+++ b/05-bug-tracker-state-manager/04-index.html
@@ -225,6 +225,7 @@
 
 	{/* connect logic for bugTracker */}
 		function mapStateToBugTrackerProps(storeState){
+			//let bugs = storeState.bugsData.filter((bug, index) => index % 2 === storeState.spinnerData % 2);
 			let bugs = storeState.bugsData;
 			return { list : bugs };
 		}
